# metaverse

builds/msvc-140/: metaverse.sln
builds/msvc-140/mvs-cli/: mvs-cli.vcxproj
builds/msvc-140/mvsd/: mvsd.vcxproj
builds/msvc-140/mvstools/: ReadMe.txt  mvstools.cpp  mvstools.rc  mvstools.vcxproj  mvstools.vcxproj.filters  resource.h  stdafx.cpp
builds/msvc-140/mvstray/: mvstray.vcxproj
include/metaverse/consensus/: miner.hpp
include/metaverse/explorer/extensions/: command_extension.hpp
include/metaverse/network/: channel.hpp  connector.hpp
include/metaverse/network/sessions/: session_seed.hpp
include/metaverse/node/sessions/: session_header_sync.hpp
src/: CMakeLists.txt
src/lib/bitcoin/: constants.cpp  error.cpp
src/lib/bitcoin/utility/: path.cpp
src/lib/consensus/: miner.cpp
src/lib/consensus/common/libdevcore/: BasicType.cpp
src/lib/consensus/common/miner/: MinerAux.cpp
src/lib/explorer/commands/offline/: mnemonic-to-seed.cpp
src/lib/explorer/extensions/: base_helper.cpp  exception.cpp
src/lib/explorer/extensions/miner/: start.cpp
src/lib/explorer/extensions/wallet/: exportaccountasfile.cpp  getnewaddress.cpp
src/lib/network/: connector.cpp  p2p.cpp  proxy.cpp  settings.cpp
src/lib/network/sessions/: session.cpp  session_manual.cpp  session_seed.cpp
src/lib/node/sessions/: session_header_sync.cpp
src/mvs-cli/: main.cpp
src/mvs-tools/: CMakeLists.txt  main.cpp
